--- a/Bio.html
+++ b/Bio.html
@@ -13,7 +13,7 @@
 		<div class="header">
 			<h1>My Biography</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>        
+			<p><a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home</a>        
 			<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>          
 			<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>         
 			 <a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p></p>
