--- a/Bio.html
+++ b/Bio.html
@@ -14,7 +14,7 @@
 			<h1>My Biography</h1>
 		<div class="nav">
 			<p>
-				<a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href="C:\Users\Erick\Desktop\Future Programer\index.html">Home&nbsp;&nbsp;&nbsp;</a>            
 				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
 				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
 				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts</a>
