--- a/Bio.html
+++ b/Bio.html
@@ -4,6 +4,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="Bio.css"/>
+		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio\Bio </title>
 	</head>
